--- a/okteto.yml
+++ b/okteto.yml
@@ -1,5 +1,5 @@
 name: Whatsapp-Bot-Jawir
-image: dockerhubusername/myapp:latest # Replace with your Docker image name
+image: Dockerfile # Replace with your Docker image name
 
 # Define your application's services
 services:
